scss/layout/_header.scss
header {
    z-index: 3;
    width: 100%;
    background-color: white;
    position: fixed;
    top: 0;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
    transition: all 0.2s ease-in-out;

    .approved-use {
        border-bottom: 1px solid $gray-color-2;

        padding: 10px 32px;
        h5 {
            color: $secondary-color;
            line-height: 1.6;
            font-size: 1.4rem;
            @include respond(tab-land) {
                text-align: center;
            }
        }
        p {
            color: $gray-color;
            margin-bottom: 12px;
            font-size: 1.4rem;
            line-height: 1.2;
            &:last-of-type {
                margin: 0;
            }
        }
    }

    nav {
        padding: 20px 80px 10px;

        display: flex;
        align-items: center;
        justify-content: space-between;

        @include respond(tab-land) {
            flex-direction: column-reverse;
            padding: 10px 80px 10px;
        }

        .logo {
            // align-self: flex-end;
            padding: 10px;

            @include respond(tab-land) {
                align-self: center;
                order: 2;
                img {
                    width: 150px;
                }
            }
        }
        .nav-buttons {
            display: flex;
            flex-direction: column;
            @include respond(tab-land) {
                justify-content: center;
                flex-direction: column-reverse;
                order: 2;
            }
            #us-only {
                margin-bottom: 20px;
                text-align: right;
                @include respond(tab-land) {
                    // margin: 20px;
                    line-height: 1.5rem;
                    margin-bottom: 0;
                    text-align: center;
                }
            }
            .site-buttons {
                display: flex;
                font-size: 1.4rem;
                margin-right: 10px;
                @include respond(tab-land) {
                    flex-wrap: wrap;
                    justify-content: center;
                    margin-right: 0;
                    margin-bottom: 10px;
                    .site-button {
                        width: 240px;
                    }
                }
                .site-button {
                    color: $gray-color;
                    background-color: $white-color;
    
                    border-bottom: 1px solid $tertiary-color-2;
                    border-right: 1px solid $tertiary-color-2;

                    @include respond(tab-land) {
                        border-right: none;
                    }
    
                    max-width: 240px;
                    min-width: 130px;
                    min-height: 30px;
                    padding: 5px 20px;
    
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    text-align: center;
    
                    &.orange {
                        color: #fff;
                        background-color: $tertiary-color-2;
                    }
                }
                &:after {
                    position: absolute;
                    @include respond(tab-land) {
                        display: none;
                    }
                    @include respond(big-desktop) {
                        width: 50%;
                    }
                    right: 80px;
                    margin-top: 20px;
                    height: 1px;
                    background: $tertiary-color-2;
                    content: "";
                    width: 65%;
                    z-index: -1;
                }
            }
            .nav-links {
                display: flex;
                justify-content: flex-end;
                @include respond(tab-land) {
                    display: none;
                }
                
                padding-top: 30px;
                padding-bottom: 10px;
                li {
                    border-bottom: 2px solid $primary-color-2;
                    padding: 6px;
                    margin: 0 20px;
                    margin-right: 0;
                    &.active {
                        border-bottom: 4px solid $primary-color-2;
                        .nav-link {
                            font-weight: 600;
                        }
                    }

                    .nav-link {
                        font-size: 1.4rem;
                        line-height: 16.8px;
                        color: $gray-color;
                    }
                }
            }
        }
        .mobile-button {
            display: none;
            @include respond(tab-land) {
                display: block;
                order: 1;
                margin: 0;
            }
            cursor: pointer;

            background-color: $secondary-color-3;
            color: #fff;
            border: none;
            
            padding: 5px;
            margin: 20px;
            width: 100%;
            height: 35px;
            font-size: 2rem;
        }
        .mobile-links {
            display: flex;
            flex-direction: column;
            li {
                text-align: center;
                font-size: 1.4rem;
                padding: 6px;
                margin: 0 8px;
                
                border-bottom: 2px solid $primary-color-2;
                a {
                    color: $gray-color;
                }
                &.active {
                    font-weight: 600;
                    a {
                        color: $primary-color;
                    }
                }
            }
            width: 100%;
        }
    }
}

